semi load latest update

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 			<h4>Your consent</h4>
 			<p> By starting the test, you consent to the terms of this privacy policy.</p>
 			<h4>Data removal</h4>
-			<p> If you want to have your information deleted, you need to provide either the ID of the test or your IP address. This is the only way to identify your data, without this information we won't be able to comply with your request.<br><br>Contact this email address for all deletion requests: <a href='mailto:dev@roipmars.org.my'>dev@roipmars.org.my</a>.</p>
+			<p> If you want to have your information deleted, you need to provide either the ID of the test or your IP address. This is the only way to identify your data, without this information we won't be able to comply with your request.<br><br>Contact this email address for all deletion requests: <a href='mailto:owner@mhrtech.my'>owner@mhrtech.my</a>.</p>
 			<div class='closePrivacyPolicy'>
 				<a class='privacy' href='#' onclick='I("privacyPolicy").style.display="none"'>Close</a>
 			</div>
